--- a/VendingMachine.Tests/VendingMachine.Tests.csproj
+++ b/VendingMachine.Tests/VendingMachine.Tests.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\VendingMachine.CLI\VendingMachine.CLI.csproj" />
+  </ItemGroup>
+
 </Project>
